@@ -14,7 +14,7 @@ $custom = $Tools->fetch_custom_fields('racks');
 $hidden_custom_fields = json_decode($User->settings->hiddenCustomFields, true);
 $hidden_custom_fields = is_array(@$hidden_custom_fields['racks']) ? $hidden_custom_fields['racks'] : array();
 # create csrf token
-$csrf = $User->Crypto->csrf_cookie ("create", "rack_devices");
+$csrf = $User->Crypto->csrf_cookie ("create-if-not-exists", "rack_devices");
 
 # verify module permissions
 if($User->check_module_permissions ("racks", 1, false)===false) {
